# iRonXtra

./: .gitignore  CMakeLists.txt  CMakePresets.json  Config.cpp  Config.h  HPR.cpp  HPR.h  Logger.cpp  Overlay.cpp  Overlay.h  OverlayCover.h  OverlayDDU.h  OverlayDebug.cpp  OverlayDebug.h  OverlayDelta.h  OverlayFlags.h  OverlayFuel.h  OverlayInputs.h  OverlayPit.h  OverlayRadar.h  OverlayRelative.h  OverlayStandings.h  OverlayTire.h  OverlayTraffic.h  OverlayWeather.h  README.md  iRonXtra.rc  main.cpp  preview_mode.cpp  preview_mode.h  resource.h  stub_data.cpp  stub_data.h  util.h
.github/workflows/: cmake-single-platform.yml
irsdk/: irsdk_client.cpp  irsdk_defines.h  irsdk_utils.cpp
